# pandora_robotics_team-gui

./: CMakeLists.txt  README.md  manifest.xml
launch/: guiLauncher.launch
src/gui/msg/: __init__.py  _positionForSemiAutonomous.py
src/masterGui/: Makefile  butterflyGui.cpp  butterflyGui.h  co2Gui.cpp  co2Gui.h  consoleManager.cpp  consoleManager.h  debugText.cpp  debugText.h  displayMap.cpp  displayMap.h  displayVideo.cpp  displayVideo.h  geotiffCreator.cpp  geotiffCreator.h  irGui.cpp  irGui.h  main.cpp  mainMotorStateGui.cpp  mainMotorStateGui.h  mapStreamThread.cpp  mapStreamThread.h  mapStreaming.cpp  mapStreaming.h  mapThread.cpp  mapThread.h  masterGui.cpp  masterGui.h  masterGui.pro  moveArmGui.cpp  moveArmGui.h  pandoragui.cpp  pandoragui.h  pandoragui.ui  semiAutoMsgPublisher.cpp  semiAutoMsgPublisher.h  semiAutonomousGui.cpp  semiAutonomousGui.h  sensorsThread.cpp  sensorsThread.h  (+19 more)
src/masterGui/Robocup2011_geotiffs/: RRL_2011_PANDORA_Mission1.tiff  RRL_2011_PANDORA_Mission2.tiff  RRL_2011_PANDORA_Mission3.tiff  RRL_2011_PANDORA_Mission4.tiff  RRL_2011_PANDORA_Mission5.tiff  RRL_2011_PANDORA_Mission6.tiff  RRL_2011_Stabilize-PANDORA_Final.tiff  RRL_2011_Stabilize-PANDORA_Semi1.tiff  RRL_2011_v Stabilize-PANDORA_Semi2.tiff
